--- a/practice-repo/practice.html
+++ b/practice-repo/practice.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Practice Task</title>
+    <link rel="stylesheet" href="/practice-repo/style/style.css">
 </head>
 <body>
-    <header>
-        <h2>The thing I learn today.</h2>
+    <header class="header">
+       <div class="">
+        <h2>The thing I <span id="color">learn</span> today.</h2>
+        <p>First of all I want To thank <span style="font-size: 20px;">programming hero</span> team and,<span style=" color: rgb(113, 202, 177);">Jhankar Mahbub</span>, the CEO of this company for introducing me to dram line. The course has been start for 2 days and I've complied 3 module, <span id="importent">ALHAMDULILLAH.</span></p>
+       </div>
+       <div class="">
+        <img src="https://www.shutterstock.com/image-vector/funny-cartoon-boy-holding-big-260nw-378333664.jpg" alt="" srcset="">
+       </div>
     </header>
 </body>
 </html>
